// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES WEB 1`] = `
<div
  className="a"
  style={
    Object {
      "margin": 10,
      "padding": 20,
    }
  }
>
  Hallo world
</div>
`;

exports[`WITH STYLES WEB 2`] = `"a"`;

exports[`WITH STYLES WEB 3`] = `
Array [
  <h1>
    Hallo
  </h1>,
  <div>
    <div
      id="1"
    />
  </div>,
]
`;

exports[`WITH STYLES WEB 4`] = `
Array [
  <h1>
    Hallo
  </h1>,
  <div>
    <div
      id="123"
    />
  </div>,
]
`;
